# live2d

./: .npmrc  BUILD_GUIDE.md  CHANGELOG.md  LICENSE  README.md  biome.json  bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: build-release.yml
public/live2d/: example.motionsync.json
public/live2d/dog-boy-a/: items_pinned_to_model.json  守护灵小狗-使用规则.txt  守护灵小狗-女仆打工版按键说明.txt  鱼香天天卷版权所有XIAOPmaiddress.cdi3.json  鱼香天天卷版权所有XIAOPmaiddress.model3.json  鱼香天天卷版权所有XIAOPmaiddress.physics3.json  鱼香天天卷版权所有XIAOPmaiddress.vtube.json
public/live2d/dog-boy-b/: items_pinned_to_model.json  守护灵小狗-使用规则.txt  守护灵小狗-小P本体按键说明.txt  鱼香天天卷版权所有守护灵小狗初始版.cdi3.json  鱼香天天卷版权所有守护灵小狗初始版.model3.json  (+2 more)
scripts/: switch-to-tauri.ts
src/: App.tsx  main.tsx  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: AppUpdater.tsx  Debug.tsx  Live2DController.tsx
src/hooks/: useAIMotionProcessor.ts  useAppUpdater.ts  useChatApi.ts  useChatOperations.ts  useChatSession.ts  useContextManager.ts  useIsMobile.ts  useListenApi.ts  useLive2DMotions.ts  useLive2dApi.ts  useLive2dContainerWidth.ts  useLive2dEffects.ts  useLive2dSpeechSync.ts  useLive2dTextProcessor.ts  useMemory.ts  useMemoryDB.ts  useResponsive.ts  useSmartMemory.ts  useSpeakApi.ts  useWelcomeMessage.ts
src/lib/: breakpoints.ts  env.ts  prompts.ts  types.d.ts  utils.ts
src/routes/: index.tsx
src/stores/: useChatApi.ts  useListenApi.ts  useLive2dApi.ts  useSpeakApi.ts  useStates.ts
src/styles/: chat.css  live2d.css  loading.css
(+89 files in other folders)
